# chocolate-chip

./: CMakeLists.txt  Makefile
include/: chip8.hpp
src/: chip8.cpp  main.cpp
